# yablo

./: Cargo.toml  LICENSE  README.md  build.rs  install_script  yablo.service  yablo_remove
src/: cli.rs  lib.rs  main.rs
