build = "build.rs"

[build-dependencies]
clap = "2.33.3"

[package]
name = "yablo"
version = "0.1.0"
authors = ["Sebastian Jung <git.sebastian@gmx.de>"]
edition = "2018"

[dependencies]
battery = "0.7.6"
clap = "2.33.3"
crossterm = "0.17.7"
nix = "0.18.0"
num_cpus = "1.13.0"
serde = "1.0.115"
serde_derive = "1.0.115"
systemstat = "0.1.5"
toml = "0.5.6"
rev_lines = "0.2.1"

