build = "build.rs"

[build-dependencies]
clap = "2.33.3"

[package]
authors = ["Sebastian Jung <git.sebastian@gmx.de>"]
edition = "2018"
name = "yablo"
version = "0.2.0"

[dependencies]
battery = "0.7.6"
clap = "2.33.3"
crossterm = "0.21.0"
nix = "0.22.1"
num_cpus = "1.13.0"
serde = "1.0.130"
serde_derive = "1.0.130"
systemstat = "0.1.8"
toml = "0.5.8"
rev_lines = "0.2.1"

